Fix flashcard styles - back text cut off

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -93,8 +93,6 @@ body {
 	height: 100%;
 	position: relative;
 	transition: all 1s ease;
-	transform-style: preserve-3d;
-	perspective: 1000px;
 	cursor: pointer;
 }
 
